Added Async Downloader function to manage downloads of the image batches
- uses promises to download the image src and return the downloaded image on
the .onload()

--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <html>
 
-  <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <style>
-      .photo-bucket { margin-top: 10px; }
-      .photo-bucket img { margin-right: 10px; }
-    </style>
-  </head>
+<head>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <style>
+    .photo-bucket {
+      margin-top: 10px;
+    }
 
-  <body>
-    <button class="start">Start Loading Images</button>
-    <button class="stop">Stop Loading Images</button>
-    <div class="photo-bucket"></div>
+    .photo-bucket img {
+      margin-right: 10px;
+    }
+  </style>
+</head>
 
-    <script src="./images.js"></script>
-    <script src="./async-fiesta.js"></script>
-  </body>
+<body>
+  <button class="start">Start Loading Images</button>
+  <button class="stop">Stop Loading Images</button>
+  <div class="photo-bucket"></div>
+
+  <script src="./images.js"></script>
+  <script src="./async-fiesta.js"></script>
+  <script src="./async-downloader.js"></script>
+</body>
 
 </html>
