Finished styling for loaded images in gallery

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
         <p class="curated-description">Curated Lists 1</p>
       </div>
     </div>
-    <div>
-      <h3>Curated For You</h3>
+    <div class="curated-for-you-container">
+      <h3 class="header">Curated For You</h3>
     </div>
-    <div>
-      <button class="start">Start Loading Images</button>
-      <button class="stop">Stop Loading Images</button>
+    <button class="start">Start Loading Images</button>
+    <button class="stop">Stop Loading Images</button>
+    <div class="curated-photos-container">
     </div>
     <div class="photo-bucket"></div>
   </div>
